# caduzera

./: .gitignore  pyproject.toml  requirements.txt  test.py
src/caduzera/: __init__.py
src/caduzera/social/telegram/: __init__.py  client.py  config.py  receiver.py  sender.py
